fix(ZNTA-1903): fix overflow values for editor sidebar

--- a/server/zanata-frontend/src/frontend/app/editor/containers/Root/index.css
+++ b/server/zanata-frontend/src/frontend/app/editor/containers/Root/index.css
@@ -134,7 +134,7 @@ li.docName span.ellipsis {
   left: 0;
   right: 0;
   bottom: 0;
-  overflow: scroll;
+  overflow: auto;
   overflow-x: hidden;
   overflow-y: scroll;
 }
